[package]
name = "png-achunk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cpg314/png-achunk"
category = ["multimedia::images"]
description = "Encode and decode custom binary chunks in PNG images "

[dependencies]
ascii = "1.1.0"
crc32fast = "1.3.2"
image = "0.24.7"
png = "0.17.10"
thiserror = "1.0.50"

[dev-dependencies]
tempfile = "3.8.1"
anyhow = "1.0.75"


[workspace]
members = ["py", "c"]
