[package]
name = "png-achunk"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cpg314/png-achunk"
description = "Encode and decode custom binary chunks in PNG images "
categories = ["multimedia::images"]

[dependencies]
ascii = "1.1.0"
crc32fast = "1.5.0"
image = "0.25.6"
png = "0.17.16"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"
anyhow = "1.0.98"


[workspace]
members = ["py", "c"]
